Sobrescribir rama main con la versión local